@@ -35,11 +35,13 @@ before_install:
   - sudo apt-get install -qq libicu-dev gettext aspell-en unixodbc-dev odbcinst unixodbc software-properties-common
   - cat t/odbc/odbcinst.ini | sudo tee -a /etc/odbcinst.ini
 
-  # Set up Firebird.
+  # Set up Firebird. https://help.ubuntu.com/community/Firebird3.0
   - sudo add-apt-repository -y ppa:mapopa/firebird3.0
   - sudo apt-get update -qq
   - sudo apt-get install -qq firebird3.0-server firebird-dev
+  - sudo dpkg-reconfigure firebird3.0-server
   # XXX Something prevents Firebird from starting; permission issue?
+  # XXX https://groups.google.com/forum/#!topic/linux.debian.bugs.dist/VfrKd1CPeZE
   - sudo -u firebird /usr/sbin/fbguard -daemon -forever -pidfile /var/run/firebird3.0/firebird.pid
   - sudo chmod a+r /etc/firebird/3.0/SYSDBA.password
   - . /etc/firebird/3.0/SYSDBA.password
